create: connected Google Fonts  - Nunito & Mulish

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Best Tour Plan - Hotel Booking </title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
+    rel="stylesheet">
 </head>
 <body>
   <header class="header">
@@ -22,7 +26,7 @@
            <span class="user__name">Nathan</span>
          </a>
       </div>
-     <div class="header-menu">
+     <nav class="header-menu">
        <ul class="header-menu__list">
          <li class="header-menu__item"><a href="#" class="header-menu__link"></a>All Deals</li>
          <li class="header-menu__item"><a href="#" class="header-menu__link"></a>Hotels</li>
@@ -32,7 +36,7 @@
          <li class="header-menu__item"><a href="#" class="header-menu__link"></a>Events</li>
          <li class="header-menu__item"><a href="#" class="header-menu__link"></a>Rodrigues</li>
        </ul>
-     </div>
+     </nav>
 
     </div>
   </header>
