fix: rename header block to navbar

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <header class="header">
     <div class="container">
-      <div class="header-top">
+      <div class="navbar-top">
         <a href="#" class="logo"><img src="img/horizontal-logo.svg" alt="Logo: Best Tour Plan" class="logo__image"></a>
-         <form action="#" class="search header__search">
+         <form action="#" class="search navbar__search">
            <input type="text" class="search__input" placeholder="Search Location">
            <button class="search__button">
              <img src="img/search.svg" alt="Icon: search" class="search__icon">
@@ -27,15 +27,15 @@
            <span class="user__name">Nathan</span>
          </a>
       </div>
-     <nav class="header-menu">
-       <ul class="header-menu__list">
-         <li class="header-menu__item"><a href="#" class="header-menu__link"></a>All Deals</li>
-         <li class="header-menu__item"><a href="#" class="header-menu__link"></a>Hotels</li>
-         <li class="header-menu__item"><a href="#" class="header-menu__link"></a>Activities</li>
-         <li class="header-menu__item"><a href="#" class="header-menu__link"></a>Hotel Day Packages</li>
-         <li class="header-menu__item"><a href="#" class="header-menu__link"></a>Restaurants</li>
-         <li class="header-menu__item"><a href="#" class="header-menu__link"></a>Events</li>
-         <li class="header-menu__item"><a href="#" class="header-menu__link"></a>Rodrigues</li>
+     <nav class="navbar-menu">
+       <ul class="navbar-menu__list">
+         <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>All Deals</li>
+         <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Hotels</li>
+         <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Activities</li>
+         <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Hotel Day Packages</li>
+         <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Restaurants</li>
+         <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Events</li>
+         <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Rodrigues</li>
        </ul>
      </nav>
 
