create: responsive  table for header

--- a/index.html
+++ b/index.html
@@ -27,18 +27,19 @@
            <span class="user__name">Nathan</span>
          </a>
       </div>
-     <nav class="navbar-menu">
-       <ul class="navbar-menu__list">
-         <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>All Deals</li>
-         <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Hotels</li>
-         <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Activities</li>
-         <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Hotel Day Packages</li>
-         <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Restaurants</li>
-         <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Events</li>
-         <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Rodrigues</li>
-       </ul>
-     </nav>
-
+    </div>
+    <div class="navbar-bottom">
+      <div class="container">
+        <ul class="navbar-menu">
+          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>All Deals</li>
+          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Hotels</li>
+          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Activities</li>
+          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Hotel Day Packages</li>
+          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Restaurants</li>
+          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Events</li>
+          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link"></a>Rodrigues</li>
+        </ul>
+      </div>
     </div>
   </header>
 </body>
