--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
              <img src="img/search.svg" alt="Icon: search" class="search__icon">
            </button>
          </form>
-         <a href="#" class="user">
+         <a href="#" class="user navbar__user">
            <img src="img/avatar1.jpg" alt="avatar: Nathan" class="user__avatar">
            <span class="user__name">Nathan</span>
          </a>
+         <button class="menu-button navbar-top__menu-button">
+           <span class="menu-button__line"></span>
+           <span class="menu-button__line"></span>
+           <span class="menu-button__line"></span>
+         </button>
       </div>
     </div>
     <div class="navbar-bottom">
