create: added swiper-slider in hotel section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -83,7 +84,33 @@
           <span class="rating__counter">4.5/5</span>
         </div>
       </div>
+      <div class="hotel-grid">
+        <div class="slider">
+          <!-- Slider main container -->
+          <div class="swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <img src="img/slide1.jpg" alt="slide">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/slide1.jpg" alt="slide">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/slide1.jpg" alt="slide">
+              </div>
+              ...
+            </div>
+            <!-- If we need navigation buttons -->
+            <button class="swiper-button swiper-button--prev"></button>
+            <button class="swiper-button swiper-button--next"></button>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
+  <script src="js/swiper-bundle.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
