create: added map in hotel section

--- a/index.html
+++ b/index.html
@@ -106,6 +106,40 @@
             <button class="swiper-button swiper-button--next"></button>
           </div>
         </div>
+       <div class="hotel-right">
+          <div class="booking">
+            <div class="booking__info">
+              <div class="booking__price">
+                <span class="booking__start">price starts as</span>
+                <strong class="booking__pricetag">$ 8,500</strong>
+                <span class="booking__per-room">per room / night</span>
+              </div>
+              <div class="booking__room">
+                <div class="booking__text">
+                  <img src="img/user.svg" alt="icon: user" class="persobooking__icon">
+                  <span class="booking__description">2 x Guests</span>
+                </div>
+                <div class="booking__text">
+                  <img src="img/home.svg" alt="icon: home" class="booking__icon">
+                  <span class="booking__description">1 x Room</span>
+                </div>
+              </div>
+            </div>
+            <div class="booking__call-center">
+              <span class="booking__heading">Quick Booking</span>
+              <a href="tel:+12100" class="booking__number">
+                <img src="img/phone-call.svg" alt="icon: phone">
+                <span class="booking__numb">12100</span>
+              </a>
+            </div>
+            <button class="button booking__button">View Other Options</button>
+          </div>
+          <div class="map">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3552.363762383923!2d33.85629931552763!3d27.081823883055073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x144d7e23fcc5f61f%3A0x9922a751900f1d57!2sHurghada%20Long%20Beach%20Resort!5e0!3m2!1sru!2sru!4v1631910103255!5m2!1sru!2sru"
+              width="347" height="213" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          </div>
+       </div>
       </div>
     </div>
   </section>
