--- a/index.html
+++ b/index.html
@@ -85,20 +85,20 @@
         </div>
       </div>
       <div class="hotel-grid">
-        <div class="slider">
+        <div class="slider hotel__slider">
           <!-- Slider main container -->
           <div class="swiper">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
               <div class="swiper-slide">
-                <img src="img/slide1.jpg" alt="slide">
+                <img class="swiper-slide__img" src="img/slide1.jpg" alt="slide">
               </div>
               <div class="swiper-slide">
-                <img src="img/slide1.jpg" alt="slide">
+                <img class="swiper-slide__img" src="img/slide1.jpg" alt="slide">
               </div>
               <div class="swiper-slide">
-                <img src="img/slide1.jpg" alt="slide">
+                <img class="swiper-slide__img" src="img/slide1.jpg" alt="slide">
               </div>
             </div>
             <!-- If we need navigation buttons -->
@@ -137,7 +137,7 @@
           <div class="map">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3552.363762383923!2d33.85629931552763!3d27.081823883055073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x144d7e23fcc5f61f%3A0x9922a751900f1d57!2sHurghada%20Long%20Beach%20Resort!5e0!3m2!1sru!2sru!4v1631910103255!5m2!1sru!2sru"
-              width="347" height="213" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              width="100%" height="213" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
           </div>
        </div>
       </div>
