create: added newsletter & responsive

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,29 +10,30 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <header class="header">
     <div class="container">
       <div class="navbar-top">
         <a href="#" class="logo"><img src="img/horizontal-logo.svg" alt="Logo: Best Tour Plan" class="logo__image"></a>
-         <form action="#" class="search navbar__search">
-           <input type="text" class="search__input" placeholder="Search Location">
-           <button class="search__button">
-             <img src="img/search.svg" alt="Icon: search" class="search__icon">
-           </button>
-         </form>
-         <a href="#" class="user navbar__user">
-           <img src="img/avatar1.jpg" alt="avatar: Nathan" class="user__avatar">
-           <span class="user__name">Nathan</span>
-         </a>
-         <button class="menu-button navbar-top__menu-button">
-           <span class="menu-button__line"></span>
-           <span class="menu-button__line"></span>
-           <span class="menu-button__line"></span>
-         </button>
+        <form action="#" class="search navbar__search">
+          <input type="text" class="search__input" placeholder="Search Location">
+          <button class="search__button">
+            <img src="img/search.svg" alt="Icon: search" class="search__icon">
+          </button>
+        </form>
+        <a href="#" class="user navbar__user">
+          <img src="img/avatar1.jpg" alt="avatar: Nathan" class="user__avatar">
+          <span class="user__name">Nathan</span>
+        </a>
+        <button class="menu-button navbar-top__menu-button">
+          <span class="menu-button__line"></span>
+          <span class="menu-button__line"></span>
+          <span class="menu-button__line"></span>
+        </button>
       </div>
     </div>
     <div class="navbar-bottom">
@@ -76,7 +78,8 @@
             <h1 class="hotel-name hotel-info__name">GRAND HILTON HOTEL</h1>
             <span class="offer hotel-info__offer">Flash Offer</span>
           </div>
-          <p class="hotel-description hotel-info__description">Half-Board/ All Inclusive + Complimentary Activities + Child Stays
+          <p class="hotel-description hotel-info__description">Half-Board/ All Inclusive + Complimentary Activities +
+            Child Stays
             Free</p>
         </div>
         <div class="rating hotel-info__rating">
@@ -106,7 +109,7 @@
             <button class="swiper-button swiper-button--next"></button>
           </div>
         </div>
-       <div class="hotel-right">
+        <div class="hotel-right">
           <div class="booking">
             <div class="booking__info">
               <div class="booking__price">
@@ -139,11 +142,25 @@
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3552.363762383923!2d33.85629931552763!3d27.081823883055073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x144d7e23fcc5f61f%3A0x9922a751900f1d57!2sHurghada%20Long%20Beach%20Resort!5e0!3m2!1sru!2sru!4v1631910103255!5m2!1sru!2sru"
               width="100%" height="213" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
           </div>
-       </div>
+        </div>
       </div>
     </div>
+  </section>
+  <section class="newsletter">
+    <div class="newsletter__wrapper">
+      <h2 class="newsletter__title">subscribe to our<span class="newsletter__title-strong">Newsletter</span></h2>
+
+      <form action="#" class="subscribe newsletter__search">
+        <input type="text" class="subscribe__input" placeholder="Your email address">
+        <button class="subscribe__button">
+          Send
+        </button>
+      </form>
+    </div>
+
   </section>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
