create: added reviews section & fixed hotel slider

--- a/index.html
+++ b/index.html
@@ -88,26 +88,22 @@
         </div>
       </div>
       <div class="hotel-grid">
-        <div class="slider hotel__slider">
-          <!-- Slider main container -->
-          <div class="swiper">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-              <!-- Slides -->
-              <div class="swiper-slide">
-                <img class="swiper-slide__img" src="img/slide1.jpg" alt="slide">
-              </div>
-              <div class="swiper-slide">
-                <img class="swiper-slide__img" src="img/slide1.jpg" alt="slide">
-              </div>
-              <div class="swiper-slide">
-                <img class="swiper-slide__img" src="img/slide1.jpg" alt="slide">
-              </div>
+        <div class="swiper hotel-slider">
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide hotel-slider__item">
+              <img class="swiper-slide__img" src="img/slide1.jpg" alt="slide">
             </div>
-            <!-- If we need navigation buttons -->
-            <button class="swiper-button swiper-button--prev"></button>
-            <button class="swiper-button swiper-button--next"></button>
+            <div class="swiper-slide hotel-slider__item">
+              <img class="swiper-slide__img" src="img/slide1.jpg" alt="slide">
+            </div>
+            <div class="swiper-slide hotel-slider__item">
+              <img class="swiper-slide__img" src="img/slide1.jpg" alt="slide">
+            </div>
           </div>
+          <!-- If we need navigation buttons -->
+          <button class="hotel-slider__button hotel-slider__button--prev"></button>
+          <button class="hotel-slider__button hotel-slider__button--next"></button>
         </div>
         <div class="hotel-right">
           <div class="booking">
@@ -157,7 +153,84 @@
         </button>
       </form>
     </div>
-
+  </section>
+  <section class="reviews">
+    <div class="container">
+      <h2 class="reviews__title">What people think about us</h2>
+      <div class="swiper reviews-slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/profile1.jpg" alt="Photo: Megan Fox" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Megan Fox</h3>
+                <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+                <div class="reviews-slider__rating">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                </div>
+              </div>
+              <p class="reviews-slider__text">It was very nice hotel with cleanliness. Staff behavior was good and
+                polite. They welcome us very well. Issue was only that Lift was not in working and we were allotted to
+                3rd floor and amenities articles were in corner of gallery which were giving bad feeling. Breakfast was
+                good and support of the staff was also very nice. Location is not good as per atmosphere, it is very
+                nearby most of the popular places but self location in a narrow street is not good. Overall it was a
+                good experience and could recommend. </p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/profile2.jpg" alt="Photo: Пономарёва Динара" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Пономарёва Динара</h3>
+                <span class="reviews-slider__date">Stayed 20 Nov, 2020</span>
+                <div class="reviews-slider__rating">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                </div>
+              </div>
+              <p class="reviews-slider__text">It was very nice hotel with cleanliness. Staff behavior was good and
+                polite. They welcome us very well. Issue was only that Lift was not in working and we were allotted to
+                3rd floor and amenities articles were in corner of gallery which were giving bad feeling. Breakfast was
+                good and support of the staff was also very nice. Location is not good as per atmosphere, it is very
+                nearby most of the popular places but self location in a narrow street is not good. Overall it was a
+                good experience and could recommend. </p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/profile3.jpg" alt="Photo: Маврин Климент" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Маврин Климент</h3>
+                <span class="reviews-slider__date">Stayed 1 Nov, 2021</span>
+                <div class="reviews-slider__rating">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                  <img src="img/Star.svg" alt="star">
+                </div>
+              </div>
+              <p class="reviews-slider__text">It was very nice hotel with cleanliness. Staff behavior was good and
+                polite. They welcome us very well. Issue was only that Lift was not in working and we were allotted to
+                3rd floor and amenities articles were in corner of gallery which were giving bad feeling. Breakfast
+                was
+                good and support of the staff was also very nice. Location is not good as per atmosphere, it is very
+                nearby most of the popular places but self location in a narrow street is not good. Overall it was a
+                good experience and could recommend. </p>
+            </div>
+          </div>
+        </div>
+        <button class="reviews-slider__button reviews-slider__button--prev"></button>
+        <button class="reviews-slider__button reviews-slider__button--next"></button>
+      </div>
+    </div>
   </section>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
