--- a/index.html
+++ b/index.html
@@ -232,6 +232,41 @@
       </div>
     </div>
   </section>
+  <section class="activities">
+    <div class="container">
+      <h2 class="activities__title">Other Activities</h2>
+      <div class="activities-wrapper">
+        <div class="card activities__card">
+          <img src="img/card-img-1.jpg" alt="The curious corner of chamarel" class="card__image">
+          <h3 class="card__title">The curious corner
+            of chamarel</h3>
+          <button class="card__button">Book Now</button>
+        </div>
+        <div class="card activities__card">
+          <img src="img/card-img-2.jpg" alt="Gymkhana club golf
+            course" class="card__image">
+          <h3 class="card__title">Gymkhana club golf
+            course</h3>
+          <button class="card__button">Book Now</button>
+        </div>
+        <div class="card activities__card">
+          <img src="img/card-img-3.jpg" alt="Tamarind falls hiking
+            trip - full day" class="card__image">
+          <h3 class="card__title">Tamarind falls hiking
+            trip - full day
+          </h3>
+          <button class="card__button">Book Now</button>
+        </div>
+        <div class="card activities__card">
+          <img src="img/card-img-4.jpg" alt="he blue marine discovery
+            quest" class="card__image">
+          <h3 class="card__title">The blue marine discovery
+            quest</h3>
+          <button class="card__button">Book Now</button>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
